--- a/style.css
+++ b/style.css
@@ -18,6 +18,12 @@ header {
   justify-content: flex-end;
   align-items: center;
   padding: 2rem 4rem;
+  position: relative;
+}
+
+nav {
+  position: relative;
+  z-index: 2;
 }
 
 nav ul {
@@ -31,7 +37,7 @@ nav a {
   text-decoration: none;
   color: #333;
   font-weight: 400;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
 }
 
 nav a::after {
@@ -50,12 +56,14 @@ nav a:hover::after {
   width: 100%;
 }
 
+
 .intro {
   flex: 1;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0 6rem;
+  margin-top: 120px;
 }
 
 .text {
@@ -78,6 +86,16 @@ p {
 
 strong {
   font-weight: 600;
+}
+
+.logo {
+  position: absolute;
+  left: 6rem;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 50px;
+  width: auto;
+  z-index: 1;
 }
 
 .buttons {
